--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/GameClient.loader.js";
       const config = {
-        dataUrl: buildUrl + "/GameClient.data",
-        frameworkUrl: buildUrl + "/GameClient.framework.js",
-        codeUrl: buildUrl + "/GameClient.wasm",
+        dataUrl: buildUrl + "/GameClient.data.gz",
+        frameworkUrl: buildUrl + "/GameClient.framework.js.gz",
+        codeUrl: buildUrl + "/GameClient.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "InterfaceProject",
